--- a/template/project/src/global.less
+++ b/template/project/src/global.less
@@ -67,3 +67,8 @@ ol {
   align-items: center;
   justify-content: center;
 }
+// 按钮样式修改
+.ant-pagination-item-link {
+  display: flex !important;
+  align-items: center;
+}
