--- a/template/umi/src/global.less
+++ b/template/umi/src/global.less
@@ -13,6 +13,9 @@ body,
 .ant-layout {
   min-height: 100vh;
 }
+.ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
+  left: unset;
+}
 
 canvas {
   display: block;
@@ -51,19 +54,4 @@ ol {
   body .ant-design-pro > .ant-layout {
     min-height: 100vh;
   }
-}
-
-// 表格样式覆盖
-.ant-pro-table-search {
-  margin-bottom: 0 !important;
-  padding: 24px 24px 0 !important;
-  .ant-form-item-label {
-    flex: 0 0 auto !important;
-  }
-}
-// 分页样式覆盖
-.ant-pagination-item-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
