--- a/template/umi/src/layouts/PassportLayout/index.less
+++ b/template/umi/src/layouts/PassportLayout/index.less
@@ -1,73 +1,98 @@
-@import '~antd/es/style/themes/default.less';
+// 未登录公共布局
+@passport-background: #f0f2f5;
+@passport-backgroundImage: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
+@passport-backgroundPosition: center 110px;
+@passport-padding: 72px 40px 24px;
+@passport-content-width: 385px;
+
+// 未登录公共布局-标题
+@passport-title-color: fade(#000, 85%);
+@passport-title-height: 44px;
+@passport-title-size: 33px;
+@passport-title-weight: 600;
+@passport-title-space: 16px;
+
+// 未登录公共布局-描述
+@passport-description-color: fade(#000, 45%);
+@passport-description-size: 14px;
+@passport-description-margin: 12px 0 40px 0;
+
+// 公共页脚
+@page-footer-color: #888;
+@page-footer-size: 14px;
+@page-footer-transition: all 0.15s linear;
 
 .passportContainer {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  padding: 24px;
   overflow: auto;
-  background: @layout-body-background;
+  background: @passport-background;
 }
 
 .passportContent {
   flex: 1;
-  padding: 32px 0;
+  padding: @passport-padding;
 }
 
 .passportTop {
   text-align: center;
+
   .passportHeader {
-    height: 44px;
-    line-height: 44px;
-    a {
-      text-decoration: none;
-    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
   }
+
+  // 图标
   .passportLogo {
-    height: 44px;
-    margin-right: 16px;
-    vertical-align: passportTop;
+    height: @passport-title-height;
+    margin-right: @passport-title-space;
+    vertical-align: top;
   }
+
+  // 标题
   .passportTitle {
-    position: relative;
-    top: 2px;
-    color: @heading-color;
-    font-weight: 600;
-    font-size: 33px;
-    font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    margin: 0;
+    color: @passport-title-color;
+    font-weight: @passport-title-weight;
+    font-size: @passport-title-size;
+    line-height: normal;
   }
+
+  // 描述
   .passportDesc {
-    margin-top: 12px;
-    margin-bottom: 40px;
-    color: @text-color-secondary;
-    font-size: @font-size-base;
+    margin: @passport-description-margin;
+    color: @passport-description-color;
+    font-size: @passport-description-size;
   }
 }
 
+// 页脚
+.passportFooter {
+  width: 100%;
+  color: @page-footer-color !important;
+  font-size: @page-footer-size !important;
+  text-align: center;
+  transition: @page-footer-transition;
+}
+
+// 内容
 .passportMain {
-  width: 368px;
+  width: @passport-content-width;
   margin: 0 auto;
-  @media screen and (max-width: @screen-sm) {
+
+  @media screen and (max-width: 576px) {
     width: 95%;
   }
-
-  :global {
-    .antd-pro-passport-submit {
-      width: 100%;
-      margin-top: 24px;
-    }
-  }
 }
 
-@media (min-width: @screen-md-min) {
+@media (min-width: 768px) {
   .passportContainer {
-    background-image: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
+    background-image: @passport-backgroundImage;
     background-repeat: no-repeat;
-    background-position: center 110px;
+    background-position: @passport-backgroundPosition;
     background-size: 100%;
-  }
-
-  .passportContent {
-    padding: 32px 0 24px;
   }
 }
