--- a/template/umi/src/pages/Passport/Login/index.less
+++ b/template/umi/src/pages/Passport/Login/index.less
@@ -1,11 +1,11 @@
-@import '~antd/es/style/themes/default.less';
-
 .loginContainer {
   :global {
+    // 标签页
     .ant-tabs {
       .ant-tabs-nav-list {
         margin: auto;
       }
+
       .ant-tabs-bar {
         margin-bottom: 24px;
         text-align: center;
@@ -13,8 +13,10 @@
       }
     }
   }
+
+  // 眼睛图标
   .loginIcon {
-    color: @disabled-color;
-    font-size: @font-size-base;
+    color: fade(#000, 25%);
+    font-size: 14px;
   }
 }
